# Candidate-Recruitment-Portal

./: README.md  app.py  graph_visualization.py  main.py  portal.db  pyproject.toml  requirements.txt  ui.py
app/agents/: __init__.py  agent_types.py  base_agent.py  llm_models.py  state.py
app/agents/general_knowledge_agent/: __init__.py  general_knowledge_agent.py
app/agents/hr_interview_agent/: __init__.py  hr_interview_agent.py
app/agents/orchestrator_agent/: orchestrator_agent.py
app/agents/resume_helper_agent/: __init__.py  resume_helper_agent.py
app/agents/tech_interview_agent/: __init__.py  tech_interview_agent.py
app/nodes/: orchestrator_node.py
app/tools/: recruitment_tools.py
app/utils/: db.py  intent_detector.py  tts.py
app/workflows/: __init__.py  recruitment_workflow.py
data/conversations/: recruitment_session_-4110231887846085013.json  recruitment_session_-7694675940786137962.json  recruitment_session_-985200571943886205.json  recruitment_session_8731440600731289795.json
