[project]
name = "candidate-recruitment-portal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=4.2.1",
    "langgraph>=1.0.10",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.1",
    "nest-asyncio>=1.6.0",
    "pydantic",
    "gradio>=6.8.0",
    "gtts>=2.5.4",
    "speechrecognition>=3.14.5",
]
